[build-system]
requires = ["setuptools>=50.3.2", "wheel", "setuptools-declarative-requirements", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/ptscripts/version.py"
write_to_template = "# pylint: skip-file\n\n__version__ = \"{version}\"\n"

[tool.towncrier]
package = "ptscripts"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/s0undt3ch/python-tools-scripts/issues/{issue}>`_"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = true

[tool.ruff]
line-length = 120
select = ["ALL"]
show-fixes = true
show-source = true
target-version = "py39"
respect-gitignore = true
src = [
  "src",
]
extend-exclude = [
  ".nox/**",
]
extend-include = [
  "setup.py",
  "noxfile.py",
  "src/**/*.pyi",
]
ignore = [
  # D* pydocstyle
  "D200",   # Reformat to one line
  "D212",   # Remove whitespace after opening quotes
  "COM",    # flake8-commas - Black takes care of this
  "ERA",    # eradicate
  "SIM108", # Use ternary operator `A = X if Y else Z` instead of `if`-`else`-block
  "FBT",    # Boolean traps
  "ANN002", # Missing type annotation for `*args`
  "ANN003", # Missing type annotation for `**kwargs`
  "ANN102", # Missing type annotation for `cls` in classmethod
]
ignore-init-module-imports = true
# Group violations by containing file.
format = "grouped"

[tool.ruff.per-file-ignores]
"src/**/*.py" = [
  "ANN101", # Missing type annotation for `self` in method
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D107",   # Missing docstring in `__init__`
]
"src/ptscripts/__init__.py" = [
  "E402",   # Module level import not at top of file
  "F401",   # * imported but unused; consider adding to `__all__` or using a redundant alias
]
"src/ptscripts/logs.py" = [
  "D101",   # Missing docstring in public class
  "D102",   # Missing docstring in public method
  "N802",   # Function name should be lowercase
  "ANN002", # Missing type annotation for `*args`
  "ANN003", # Missing type annotation for `**kwargs`
]
"src/ptscripts/virtualenv.py" = [
  "PTH110", # `os.path.exists()` should be replaced by `Path.exists()`
  "PTH118", # `os.path.join()` should be replaced by `Path` with `/` operator
  "PTH119", # `os.path.basename()` should be replaced by `Path.name`
  "ANN002", # Missing type annotation for `*args`
  "ANN003", # Missing type annotation for `**kwargs`
]
"src/ptscripts/parser.py" = [
  "SLF001", # Private member accessed
  "A001",   # Variable `*` is shadowing a Python builtin
  "A002",   # Argument `*` is shadowing a Python builtin
  "A003",   # Class attribute `*` is shadowing a Python builtin
]
"src/ptscripts/process.py" = [
  "SLF001",   # Private member accessed
]
"setup.py" = [
  "D",
  "EXE001",   # Shebang is present but file is not executable
]
"noxfile.py" = [
  "D",
  "ANN",
  "PTH",
  "SLF001",
  "C901",
  "PLR0912",
  "DTZ005",
  "FBT002",
  "PLR0915", # Too many statements
]
"tests/**/*.py" = [
  "ANN",      # Ignore missing type annotations in tests
  "ARG001",   # Unused function argument
  "D100",     # Missing docstring in public module
  "D103",     # Missing docstring in public function
  "D104",     # Missing docstring in public package
  "DTZ003",   # The use of `datetime.datetime.utcnow()` is not allowed, use `datetime.datetime.now(tz=)` instead
  "PLR2004",  # Magic value used in comparison, consider replacing 3 with a constant variable
  "PT001",    # use @pytest.fixture() over @pytest.fixture
  "PT023",    # use @pytest.mark.<blah>() over @pytest.mark.<blah>
  "RET504",   # Unnecessary variable assignment before `return` statement"
  "S101",     # Ignore the use of 'assert ...' in tests
  "S603",     # `subprocess` call: check for execution of untrusted input
  "SIM117",   # Use a single `with` statement with multiple contexts instead of nested `with` statements
  "TCH002",   # Move third-party import into a type-checking block
  "TCH003",   # Move standard library import `pathlib` into a type-checking block
]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.isort]
combine-as-imports = false
force-single-line = true
known-first-party = ["src"]
forced-separate = ["tests"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

#[tool.ruff.pep8-naming]
#ignore-names = [
#  "__virtual__",
#]

[tool.ruff.mccabe]
max-complexity = 20

[tool.ruff.pylint]
max-args = 8
max-branches = 25
